added a few comments

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 </head>
 
 <body>
+    <!--This is Project - 3, that has been done for Elevation Academy.
+  This project consists of html,css as well as media queries.
+  In this project, the web page design in this address
+  <a href="https://xd.adobe.com/view/d7ac1785-8e91-4abf-abb6-218874dba929-82ff/">todo-app-ui-mobile</a>
+  has been tried to be replicated. -->
+
+  <!-- Time taken to complete the project = Approx. 13 and a half Hours -->
+
   <!-- Below is a nested div with 2 divs inside (container-head & container-body).
   Inside 1st nested div of container-head there are 2 divs (container1 & container2).
     Container1 & container2 has 2 divs inside respectively.
